# knxproj-ha

./: .gitignore  DEV.ipynb  README.md  convert.py  knxproj-ha.py  poetry.toml  pyproject.toml
knxproj_ha/: convert.py  models.py
